# streaming-prediction-service

./: .gitignore
mock_objects/: pyproject.toml
mock_objects/src/: data_mocker.py  mock_data_argparser.py  mock_data_generator.py  model_mocker.py
mock_objects/utils/: data_mocker_argparser.py
